...
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin">

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tag_product_list_item_title_view"
                    android:textSize="16sp"
                    tools:text="Aerodynamic Plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
...
